--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="share_message_app_name">-via Parapluie</string>
     <string name="deep_link_prefix">\?link=http://www.askoliv.com/</string>
     <string name="deep_link_suffix">&amp; apn=com.askoliv.app</string>
+    <string name="text_seeking_help_with_story">Help me with </string>
 
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
@@ -35,4 +36,9 @@
     <string name="story_loves_text">Loves</string>
 
     <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
+
+    <!--Facebook Public Profile Access-->
+    <string name="facebook_graph_url_prefix">https://graph.facebook.com/</string>
+    <string name="facebook_picture_url_suffix">/picture?type=square</string>
+
 </resources>
