--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,11 @@
     <string name="share_message_app_name">-via Parapluie</string>
     <string name="deep_link_prefix">\?link=http://www.askoliv.com/</string>
     <string name="deep_link_suffix">&amp; apn=com.askoliv.app</string>
-    <string name="text_seeking_help_with_story">Help me with </string>
+    <string name="text_seeking_help_with_story">Hey There! So you like </string>
+    <string name="text_seeking_help_with_story_suffix">What\'s on your mind? </string>
+    <string name="toast_chat_related_to_story">Continue your chat on any topic here!</string>
+    <string name="toast_love_button">We also love this! Keep reading for more!</string>
+    <string name="toast_unlove_button">Thanks for your feedback!</string>
 
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
@@ -21,6 +25,7 @@
     <string name="signup_with_email">Sign Up</string>
     <string name="com_facebook_loginview_log_in_button">Log in</string>
     <string name="com_facebook_loginview_log_in_button_long">Sign in with Facebook</string>
+    <string name="login_privacy_promise">We promise to keep your info private!</string>
 
     <string name="title_activity_send_image">Send Image</string>
     <string name="dummy_button">Dummy Button</string>
@@ -34,6 +39,9 @@
     <string name="story_chat_related_button_text">Get Personalized Help</string>
     <string name="story_shares_text">Shares</string>
     <string name="story_loves_text">Loves</string>
+    <string name="story_share_error_generic">Something\'s not right! Can\'t share story!</string>
+    <string name="story_share_error_permission">If you don\'t trust me, how can I share?</string>
+    <string name="image_error_permission">Don\'t be camera shy!</string>
 
     <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
 
