--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="toast_chat_related_to_story">Continue your chat on any topic here!</string>
     <string name="toast_love_button">We also love this! Keep reading for more!</string>
     <string name="toast_unlove_button">Thanks for your feedback!</string>
+    <string name="toast_text_copied">Copied to Clipboard!</string>
 
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
@@ -48,5 +49,7 @@
     <!--Facebook Public Profile Access-->
     <string name="facebook_graph_url_prefix">https://graph.facebook.com/</string>
     <string name="facebook_picture_url_suffix">/picture?type=square</string>
+
+    <string name="placeholder_text">We have just landed here! \nWatch out for more&#8230;</string>
 
 </resources>
