--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,9 @@
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
     <string name="section_format">Hola from section: %1$d</string>
-    <string name="hint_text_chat">Type your question</string>
+    <string name="hint_text_chat">Add a caption</string>
     <string name="action_send">Send</string>
+    <string name="image_confirmation_title">Send image</string>
 
     <string name="login_with_facebook">Sign in with Facebook</string>
     <string name="login_with_google">Sign in with Google</string>
@@ -50,6 +51,9 @@
     <string name="facebook_graph_url_prefix">https://graph.facebook.com/</string>
     <string name="facebook_picture_url_suffix">/picture?type=square</string>
 
-    <string name="placeholder_text">We have just landed here! \nWatch out for more&#8230;</string>
+    <string name="placeholder_text">We are working on this page!</string>
+    <string name="female_only_message">Sorry! We don\'t cater to men currently!</string>
+
+    <string name="title_activity_image_confirmation">ImageConfirmationActivity</string>
 
 </resources>
